--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       --grid-color: #404041;
       --surface-color: #ffffff;
       --text-color: #494848;
-      --primary-color: #626464;
+      --primary-color: #217BD2;
       --border-color: #cccccc;
       --link-color: #1462BA;
       --button-color: #26C6DA;
